# python-project-83

./: .env.example  .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  db.py
page_analyzer/templates/: 404.html  base.html  index.html  urls.html  urls_list.html
