[tool.poetry]
name = "python-project-83"
version = "0.1.0"
description = ""
authors = ["Slavyan <GlockOglock@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
